<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#59000000"
    android:id="@+id/viewDialog"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="17sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_warning_permission"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17sp"
            android:gravity="start"
            android:text="@string/desc_warning_permission_dialog"
            android:textSize="13sp" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/txtGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17sp"
            android:layout_marginVertical="15sp"
            android:background="@drawable/bg_button_color_app_circle"
            android:gravity="center"
            android:paddingVertical="13sp"
            android:text="@string/go_to_setting"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>
</RelativeLayout>